--- a/pom.xml
+++ b/pom.xml
@@ -17,10 +17,9 @@
         <module>soeasy-java-repo</module>
         <module>soeasy-scala-repo</module>
         <module>soeasy-flink-function</module>
-        <module>soeasy-spring-boot</module>
-        <module>soeasy-spring-data</module>
-        <module>soeasy-spring-cloud</module>
         <module>soeasy-canal-test</module>
+        <module>soeasy-flink-demo</module>
+        <module>soeasy-spark-demo</module>
         <!--<module>soeasy-mingsir-web</module>-->
     </modules>
 
@@ -46,6 +45,7 @@
         <commons-io.version>2.6</commons-io.version>
     </properties>
 
+    <!--<dependencyManagement>-->
     <dependencies>
         <dependency>
             <groupId>org.apache.flink</groupId>
@@ -577,9 +577,9 @@
             </exclusions>
         </dependency>
         <!--<dependency>-->
-            <!--<groupId>org.apache.flink</groupId>-->
-            <!--<artifactId>flink-parquet_2.11</artifactId>-->
-            <!--<version>${flink.version}</version>-->
+        <!--<groupId>org.apache.flink</groupId>-->
+        <!--<artifactId>flink-parquet_2.11</artifactId>-->
+        <!--<version>${flink.version}</version>-->
         <!--</dependency>-->
         <dependency>
             <groupId>org.apache.flink</groupId>
@@ -628,7 +628,35 @@
             <artifactId>netty-all</artifactId>
             <version>4.1.24.Final</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.apache.hadoop</groupId>
+            <artifactId>hadoop-common</artifactId>
+            <version>2.7.2</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.hadoop</groupId>
+            <artifactId>hadoop-hdfs</artifactId>
+            <version>2.7.2</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.spark</groupId>
+            <artifactId>spark-sql_2.11</artifactId>
+            <version>2.1.0</version>
+        </dependency>
+        <dependency>
+            <groupId>dom4j</groupId>
+            <artifactId>dom4j</artifactId>
+            <version>1.6.1</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>xml-apis</groupId>
+                    <artifactId>xml-apis</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
     </dependencies>
+    <!--</dependencyManagement>-->
     <build>
         <plugins>
             <plugin>
@@ -668,6 +696,22 @@
                         </configuration>
                     </execution>
                 </executions>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>3.1.0</version>
+                <configuration>
+                    <archive>
+                        <manifest>
+                            <mainClass>com.mingzhang.java.spark.firstdemo.Demo1</mainClass>
+                            <addClasspath>true</addClasspath>
+                            <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
+                            <addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
+                        </manifest>
+                    </archive>
+                </configuration>
             </plugin>
         </plugins>
     </build>
