--- a/soeasy-flink-demo/pom.xml
+++ b/soeasy-flink-demo/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>soeasy-spring-boot</artifactId>
+    <artifactId>soeasy-flink-demo</artifactId>
 
 
 </project>
