--- a/soeasy-canal-test/pom.xml
+++ b/soeasy-canal-test/pom.xml
@@ -11,42 +11,40 @@
 
     <artifactId>soeasy-canal-test</artifactId>
 
-<dependencies>
-    <!-- https://mvnrepository.com/artifact/com.alibaba.otter/canal.client -->
-    <dependency>
-        <groupId>com.alibaba.otter</groupId>
-        <artifactId>canal.client</artifactId>
-        <version>1.1.4</version>
-    </dependency>
+    <dependencies>
+        <!-- https://mvnrepository.com/artifact/com.alibaba.otter/canal.client -->
+        <dependency>
+            <groupId>com.alibaba.otter</groupId>
+            <artifactId>canal.client</artifactId>
+        </dependency>
 
-    <!-- https://mvnrepository.com/artifact/com.alibaba.otter/canal.client-adapter -->
-    <dependency>
-        <groupId>com.alibaba.otter</groupId>
-        <artifactId>canal.client-adapter</artifactId>
-        <version>1.1.2</version>
-        <type>pom</type>
-    </dependency>
+        <!-- https://mvnrepository.com/artifact/com.alibaba.otter/canal.client-adapter -->
+        <dependency>
+            <groupId>com.alibaba.otter</groupId>
+            <artifactId>canal.client-adapter</artifactId>
+            <type>pom</type>
+        </dependency>
 
-    <dependency>
-        <groupId>org.apache.kafka</groupId>
-        <artifactId>kafka-clients</artifactId>
-        <version>1.1.0</version>
-    </dependency>
+        <dependency>
+            <groupId>org.apache.kafka</groupId>
+            <artifactId>kafka-clients</artifactId>
+        </dependency>
 
-    <!-- https://mvnrepository.com/artifact/org.apache.kafka/kafka-clients -->
-    <!--<dependency>-->
+        <!-- https://mvnrepository.com/artifact/org.apache.kafka/kafka-clients -->
+        <!--<dependency>-->
         <!--<groupId>org.apache.kafka</groupId>-->
         <!--<artifactId>kafka-clients</artifactId>-->
         <!--<version>2.5.0</version>-->
-    <!--</dependency>-->
+        <!--</dependency>-->
 
-    <!-- https://mvnrepository.com/artifact/com.alibaba/fastjson -->
-    <dependency>
-        <groupId>com.alibaba</groupId>
-        <artifactId>fastjson</artifactId>
-        <version>1.2.68</version>
-    </dependency>
-
-
-</dependencies>
+        <!-- https://mvnrepository.com/artifact/com.alibaba/fastjson -->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.kafka</groupId>
+            <artifactId>kafka_2.11</artifactId>
+        </dependency>
+    </dependencies>
 </project>
