--- a/soeasy-flink-demo/pom.xml
+++ b/soeasy-flink-demo/pom.xml
@@ -10,6 +10,12 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>soeasy-flink-demo</artifactId>
+    <dependencies>
+        <dependency>
+            <groupId>org.apache.flink</groupId>
+            <artifactId>flink-table-common</artifactId>
+        </dependency>
+    </dependencies>
 
 
 </project>
